static/css/s2.css
/* ... */
.searchContent .searchFilterBoxes li input[type="checkbox"]:indeterminate + label span {
    background-image: url(/static/img/checkbox-partially.svg);
}
.searchContent .searchFilterBoxes li .filter-title {
  color: #333;
}
.searchContent .searchFilterBoxes li .filter-count {
  color: #999;
}
.searchContent .searchFilterBoxes li .in-focus-arrow {
  float: right;
  padding-right: 20px;
  color: #999;
}
.interface-hebrew .searchContent .searchFilterBoxes li .in-focus-arrow {
  float: left;
  padding-left: 20px;
  padding-right: 0;
}

.searchFilterBoxes .searchFilterExactBox {
  border-top: 1px solid #ccc;
  padding: 5px 5px 5px 0;
}

.searchFilterExactBox.hidden {
  display:none;
}

.searchContent .searchSortBox {
    margin-top: 10px;
    background: white;
    width: auto;
    position: absolute;
    z-index: 1;
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
    border: 1px solid #ccc;
}

.interface-english .searchSortBox {
  right: 0;
}

.interface-hebrew .searchSortBox {
  left: 0;
}

.searchSortBox.hidden{
    display:none;
}
.searchContent .searchSortBox table {
  border-collapse: collapse;
}
.searchContent .searchSortBox tr {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  padding: 15px;
  font-size: 14px;
  letter-spacing: 1px;
  cursor: pointer;
}
.interface-hebrew .searchContent .searchSortBox tr {
  font-family: "Heebo", sans-serif;
}
.searchContent .searchSortBox tr:hover {
  background-color: #e0e0e0;
}
.searchContent .searchSortBox tr:first-child {
  border-bottom: 1px solid #eee;
}
.searchContent .searchSortBox td:not(:first-child) {
  padding: 15px 15px 15px 0;
}
.searchContent .searchSortBox td:first-child {
  padding: 0 0 0 15px;
}
.interface-hebrew .searchContent .searchSortBox td:not(:first-child) {
  padding: 15px 0 15px 15px;
}
.interface-hebrew .searchContent .searchSortBox td:first-child {
  padding: 0 15px 0 0;
}
.searchContent .searchSortBox tr.unselected {
  color: #aaa;
}
.searchSortBox tr .searchSortCheck {
  width: 10px;
  height: 10px;
  padding-left: 0;
  padding-right: 10px;
}
.interface-hebrew .searchSortBox tr .searchSortCheck {
  padding-left: 10px;
  padding-right: 0;
}
.searchSortBox tr.unselected .searchSortCheck {
  display: none;
}
.searchContent .searchResultsOverlay {
  opacity: 0.5;
}
.searchContent .searchFilterCategoryBox,
.searchContent .searchFilterBookBox {
  padding-top: 10px;
  width: 50%;
  height: 150px;
  overflow-y: auto;
}
.interface-hebrew .searchContent .searchFilterCategoryBox,
.interface-hebrew .searchContent .searchFilterBookBox {
  /*float: right;*/
}
.searchContent .result {
  border-bottom: thin solid #eee;
  padding-bottom: 12px;
}
.searchContent .result a:hover {
  text-decoration: none;
}
.searchContent .similar-results {
  padding: 0 25px;
}
.searchContent .similar-results .result {
  border-top: none;
}
.searchContent .result .result-title {
  color: #999;
  font-weight: lighter;
  letter-spacing: 1px;
  font-size: 1.7em;
  display: block;
  padding: 20px 0 5px;
}
.searchContent .result .result-title:hover {
  text-decoration: underline;
}
.readerPanel.english .searchContent .result .result-title .en,
.readerPanel.hebrew .searchContent .result .result-title .he {
  display: block;
}
.readerPanel.english .searchContent .text_result .snippet.he,
.readerPanel.hebrew .searchContent .text_result .snippet.en,
.bilingual .searchContent .text_result .snippet.he {
  display: block;
}
.searchContent .text_result .snippet {
  color: #333;
  font-size: 2.3em;
}
.searchContent .sheet_result .snippet {
  color: #999;
  font-size: 1.6em;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.4em;
  max-height: 2.8em;
}
.searchContent .similar-results .result .result-title {
  padding: 0 0 5px;
}
.searchContent .result .version {
  color: #999;
  font-weight: lighter;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  letter-spacing: 1px;
  font-size: 11px;
  margin: 8px 0;
}
.searchContent .result .similar-trigger-box {
  color: #999;
  font-weight: lighter;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 11px;
  padding: 0;
  cursor: pointer;
  margin: 8px 0;
}
.searchContent .result .similar-trigger-box i {
  padding: 0 5px;
}

.searchContent .sheet_result .owner_image {
  height: 40px;
  width: 40px;
}

.searchContent .sheet_result {
  height: auto;
  margin: 15px 0;
}

.searchContent .sheet_result .result_img_box {
  width: 40px;
  padding-right: 20px;
  height: 100px;
  float: left;
  margin-top: 4px;
}
.searchContent .sheet_result .result_text_box {
  height: 100px;
}
.searchContent .sheet_result .result_text_box a.owner_name {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  display: block;
  color: #999;
  text-decoration: none;
  font-weight: lighter;
  letter-spacing: 1px;
  font-size: 1.7em;
}
.searchContent .sheet_result .result_text_box a.result-title {
  display: block;
  color: #000;
  text-decoration: none;
  letter-spacing: 1px;
  font-size: 1.7em;
  padding: 0;
  margin: 8px 0;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.4em;
  max-height: 2.8em;
}
.readerNavMenu .content.sheetList {
  padding: 80px 15px 15px;
}
.readerNavMenu .yourSheetsLink.navButton {
  width: 98%;
  margin-bottom: 20px;
  text-transform: uppercase;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerNavMenu .sheet {
  display: block;
  padding: 25px 0px;
  border-bottom: 1px solid #eee;
  color: black;
}
.readerNavMenu .sheet:first-child {
  padding-top: 0;
}
.readerNavMenu .sheet .sheetImg {
  height: 40px;
  width: 40px;
  float: left;
  margin: 1px 14px 20px 0;
  border-radius: 2px;
}
.readerNavMenu .sheet .sheetAuthor {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
  margin-bottom: 6px;
  letter-spacing: 1px;
}
/* ... */

